<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profilOkusaItem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/plant_info_TEXT"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintBottom_toTopOf="@+id/dishBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dishBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilOkusaItem">

        <TextView
            android:id="@+id/jelo1Item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/plant_item_TEXT"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/jelo2Item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/jelo2Item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            style="@style/plant_item_TEXT"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/jelo3Item"
            app:layout_constraintStart_toEndOf="@id/jelo1Item"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/jelo3Item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/plant_item_TEXT"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/jelo2Item"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>