<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/porodicaItem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/MAIN_plant_item"
        android:gravity="center_vertical"
        android:layout_marginVertical="4dp"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintBottom_toTopOf="@+id/klimatskiTipItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/klimatskiTipItem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/MAIN_plant_info"
        android:drawablePadding="2dp"
        app:layout_constraintBottom_toTopOf="@+id/zemljisniTipItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/porodicaItem" />

    <TextView
        android:id="@+id/zemljisniTipItem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/MAIN_plant_info"
        android:drawablePadding="2dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/klimatskiTipItem" />

</androidx.constraintlayout.widget.ConstraintLayout>