...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/searchBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Spinner
            android:id="@+id/modSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@null"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toTopOf="parent"
...
        android:layout_marginHorizontal="12dp"
        android:elevation="6dp"
        android:background="@drawable/bg_box"
        android:clickable="true"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/optionBox"
        app:layout_constraintBottom_toTopOf="@id/biljkeRV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/brzaPretraga">

        <EditText
            android:id="@+id/pretragaET"
            android:layout_width="0dp"
...
